--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/eslint-plugin-next": "^13.4.2",
     "antd": "^5.4.7",
     "axios": "^1.4.0",
+    "eslint-plugin-react": "^7.32.2",
     "next": "13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -20,6 +22,8 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
+    "eslint": "^8.40.0",
+    "eslint-config-prettier": "^8.8.0",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2"
   }
