--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next/eslint-plugin-next": "^13.4.2",
     "antd": "^5.4.7",
     "axios": "^1.4.0",
+    "country-state-city": "^3.1.4",
     "eslint-plugin-react": "^7.32.2",
     "next": "13.4.2",
     "react": "18.2.0",
