--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-lottie": "^1.2.3",
     "sass": "^1.62.1",
     "zustand": "^4.3.8"
   },
