--- a/package.json
+++ b/package.json
@@ -10,16 +10,22 @@
   },
   "dependencies": {
     "@next/eslint-plugin-next": "^13.4.2",
+    "@react-three/drei": "^9.68.6",
+    "@react-three/fiber": "^8.13.0",
+    "@types/three": "^0.152.0",
     "antd": "^5.4.7",
     "axios": "^1.4.0",
-    "country-state-city": "^3.1.4",
     "eslint-plugin-react": "^7.32.2",
+    "file-loader": "^6.2.0",
+    "leva": "^0.9.34",
     "next": "13.4.2",
+    "next-transpile-modules": "^10.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-lottie": "^1.2.3",
     "sass": "^1.62.1",
+    "three": "^0.152.2",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
