--- a/package.json
+++ b/package.json
@@ -34,5 +34,10 @@
     "eslint-config-prettier": "^8.8.0",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.2"
+  },
+  "overrides":{
+    "react-lottie": {
+      "react": "^0.14.7 || ^15.0.0 || ^16.0.0 || ^17.0.0 || ^18.0.0 || ^18.2.0" 
+    }
   }
 }
