--- a/package.json
+++ b/package.json
@@ -32,12 +32,11 @@
     "autoprefixer": "^10.4.14",
     "eslint": "^8.40.0",
     "eslint-config-prettier": "^8.8.0",
-    "postcss": "^8.4.23",
-    "tailwindcss": "^3.3.2"
+    "postcss": "^8.4.23"
   },
-  "overrides":{
+  "overrides": {
     "react-lottie": {
-      "react": "^0.14.7 || ^15.0.0 || ^16.0.0 || ^17.0.0 || ^18.0.0 || ^18.2.0" 
+      "react": "^0.14.7 || ^15.0.0 || ^16.0.0 || ^17.0.0 || ^18.0.0 || ^18.2.0"
     }
   }
 }
