--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "autoprefixer": "^10.4.14",
     "eslint": "^8.40.0",
     "eslint-config-prettier": "^8.8.0",
-    "postcss": "^8.4.23"
+    "postcss": "^8.4.23",
+    "tailwindcss": "^3.3.2"
   },
   "overrides": {
     "react-lottie": {
