--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/fiber": "^8.13.0",
     "@types/three": "^0.152.0",
     "antd": "^5.4.7",
+    "antd-table-saveas-excel": "^2.2.1",
     "axios": "^1.4.0",
     "eslint-plugin-react": "^7.32.2",
     "file-loader": "^6.2.0",
